// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VoiceBroadcastPlaybackControl /> should render state buffering as expected 1`] = `
<div>
  <div
    aria-label="pause voice broadcast"
    class="mx_AccessibleButton mx_VoiceBroadcastControl"
    role="button"
    tabindex="0"
  >
    <svg
      class="mx_Icon mx_Icon_12"
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 4a2 2 0 0 0-2 2v12a2 2 0 1 0 4 0V6a2 2 0 0 0-2-2Zm8 0a2 2 0 0 0-2 2v12a2 2 0 1 0 4 0V6a2 2 0 0 0-2-2Z"
      />
    </svg>
  </div>
</div>
`;

exports[`<VoiceBroadcastPlaybackControl /> should render state pause as expected 1`] = `
<div>
  <div
    aria-label="resume voice broadcast"
    class="mx_AccessibleButton mx_VoiceBroadcastControl mx_VoiceBroadcastControl-play"
    role="button"
    tabindex="0"
  >
    <svg
      class="mx_Icon mx_Icon_16"
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m8.98 4.677 9.921 5.58c1.36.764 1.36 2.722 0 3.486l-9.92 5.58C7.647 20.073 6 19.11 6 17.58V6.42c0-1.53 1.647-2.493 2.98-1.743Z"
      />
    </svg>
  </div>
</div>
`;

exports[`<VoiceBroadcastPlaybackControl /> should render state playing as expected 1`] = `
<div>
  <div
    aria-label="pause voice broadcast"
    class="mx_AccessibleButton mx_VoiceBroadcastControl"
    role="button"
    tabindex="0"
  >
    <svg
      class="mx_Icon mx_Icon_12"
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 4a2 2 0 0 0-2 2v12a2 2 0 1 0 4 0V6a2 2 0 0 0-2-2Zm8 0a2 2 0 0 0-2 2v12a2 2 0 1 0 4 0V6a2 2 0 0 0-2-2Z"
      />
    </svg>
  </div>
</div>
`;

exports[`<VoiceBroadcastPlaybackControl /> should render state stopped as expected 1`] = `
<div>
  <div
    aria-label="play voice broadcast"
    class="mx_AccessibleButton mx_VoiceBroadcastControl mx_VoiceBroadcastControl-play"
    role="button"
    tabindex="0"
  >
    <svg
      class="mx_Icon mx_Icon_16"
      fill="currentColor"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m8.98 4.677 9.921 5.58c1.36.764 1.36 2.722 0 3.486l-9.92 5.58C7.647 20.073 6 19.11 6 17.58V6.42c0-1.53 1.647-2.493 2.98-1.743Z"
      />
    </svg>
  </div>
</div>
`;
